@@ -16,20 +16,8 @@
 
 // scalastyle:off line.size.limit
 
-import java.io.BufferedInputStream
 import java.nio.file.Files
-import java.nio.file.attribute.PosixFilePermission
-import java.util
 
-import org.apache.commons.compress.archivers.tar.TarArchiveInputStream
-import org.apache.commons.compress.compressors.gzip.GzipCompressorInputStream
-import org.apache.commons.compress.utils.IOUtils
-
-import scala.collection.mutable
-import scala.sys.process._
-import scala.util.Using
-
-import sbt.internal.inc.Analysis
 import sbtprotoc.ProtocPlugin.autoImport._
 
 import xsbti.compile.CompileAnalysis
@@ -40,7 +28,7 @@ import Mima._
 import Unidoc._
 
 // Scala versions
-val scala213 = "2.13.16"
+val scala213 = "2.13.17"
 val all_scala_versions = Seq(scala213)
 
 // Due to how publishArtifact is determined for javaOnlyReleaseSettings, incl. storage
@@ -60,18 +48,32 @@ crossScalaVersions := Nil
 
 val internalModuleNames = settingKey[Set[String]]("Internal module artifact names to exclude from POM")
 
-// Spark version to delta-spark and its dependent modules
+// Spark compatibility version to delta-spark and its dependent modules.
+// This is also a marker used by CrossSparkVersions.runOnlyForReleasableSparkModules.
 // For more information see CrossSparkVersions.scala
-val sparkVersion = settingKey[String]("Spark version")
+val sparkVersion = settingKey[String]("Spark compatibility version").withRank(KeyRanks.Invisible)
+val sparkArtifactVersion = settingKey[String]("Spark Maven artifact version")
+ThisBuild / sparkArtifactVersion := CrossSparkVersions.getSparkArtifactVersion()
 
 // Dependent library versions
 val defaultSparkVersion = SparkVersionSpec.DEFAULT.fullVersion // Spark version to use for testing in non-delta-spark related modules
-val hadoopVersion = "3.3.4"
+val hadoopVersion = "3.4.2"
+val sparkVersionForKernelTest = "4.0.0"
 val scalaTestVersion = "3.2.15"
 val scalaTestVersionForConnectors = "3.0.8"
 val parquet4sVersion = "1.9.4"
 val protoVersion = "3.25.1"
 val grpcVersion = "1.62.2"
+val flinkVersion = "2.0.1"
+val gcsConnectorVersion = "4.0.4"
+
+// Optional kernel version override. See `project/KernelVersion.scala` for the
+// resolution rule and `-DkernelVersion=<v>` semantics.
+val kernelVersionOpt: Option[String] = KernelVersion.kernelVersionOpt
+
+// Define the ecosystem support flags.
+val supportIceberg = CrossSparkVersions.getSparkVersionSpec().supportIceberg
+val supportHudi = CrossSparkVersions.getSparkVersionSpec().supportHudi
 
 // For Java 11 use the following on command line
 // sbt 'set targetJvm := "11"' [commands]
@@ -110,7 +112,9 @@ lazy val commonSettings = Seq(
       Seq(  // For Java 17 +
         "--add-opens=java.base/java.nio=ALL-UNNAMED",
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
         "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
         "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
         "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
       )
@@ -175,22 +179,10 @@ lazy val connectCommon = (project in file("spark-connect/common"))
     commonSettings,
     CrossSparkVersions.sparkDependentSettings(sparkVersion),
     releaseSettings,
-    Compile / compile := runTaskOnlyOnSparkMaster(
-      task = Compile / compile,
-      taskName = "compile",
-      projectName = "delta-connect-common",
-      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
-    ).value,
-    Test / test := runTaskOnlyOnSparkMaster(
-      task = Test / test,
-      taskName = "test",
-      projectName = "delta-connect-common",
-      emptyValue = ()).value,
-    publish := runTaskOnlyOnSparkMaster(
-      task = publish,
-      taskName = "publish",
-      projectName = "delta-connect-common",
-      emptyValue = ()).value,
+    // Export as JAR instead of classes directory. This ensures protobuf-generated classes
+    // (e.g., io.delta.connect.proto.DeltaCommand) are available as a JAR file in fullClasspath,
+    // which can be symlinked and picked up by Spark Submit's jars/* wildcard in connectClient tests.
+    exportJars := true,
     libraryDependencies ++= Seq(
       "io.grpc" % "protoc-gen-grpc-java" % grpcVersion asProtocPlugin(),
       "io.grpc" % "grpc-protobuf" % grpcVersion,
@@ -198,13 +190,13 @@ lazy val connectCommon = (project in file("spark-connect/common"))
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
       "javax.annotation" % "javax.annotation-api" % "1.3.2",
 
-      "org.apache.spark" %% "spark-connect-common" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-connect-common" % sparkArtifactVersion.value % "provided",
     ),
     PB.protocVersion := protoVersion,
     Compile / PB.targets := Seq(
       PB.gens.java -> (Compile / sourceManaged).value,
       PB.gens.plugin("grpc-java") -> (Compile / sourceManaged).value
-    ),
+    )
   )
 
 lazy val connectClient = (project in file("spark-connect/client"))
@@ -215,57 +207,54 @@ lazy val connectClient = (project in file("spark-connect/client"))
     commonSettings,
     releaseSettings,
     CrossSparkVersions.sparkDependentSettings(sparkVersion),
-    Compile / compile := runTaskOnlyOnSparkMaster(
-      task = Compile / compile,
-      taskName = "compile",
-      projectName = "delta-connect-client",
-      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
-    ).value,
-    Test / test := runTaskOnlyOnSparkMaster(
-      task = Test / test,
-      taskName = "test",
-      projectName = "delta-connect-client",
-      emptyValue = ()
-    ).value,
-    publish := runTaskOnlyOnSparkMaster(
-      task = publish,
-      taskName = "publish",
-      projectName = "delta-connect-client",
-      emptyValue = ()
-    ).value,
+    // Shared refresh test traits compiled into both this module and the `spark`
+    // module. See io.delta.tables.shared.
+    Test / unmanagedSourceDirectories += {
+      (LocalRootProject / baseDirectory).value /
+        "spark-shared-tests" / "src" / "test" / "scala-shared"
+    },
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
-      "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-connect-client-jvm" % sparkArtifactVersion.value % "provided",
 
       // Test deps
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
-      "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion.value % "test" classifier "tests"
+      "org.apache.spark" %% "spark-connect-client-jvm" % sparkArtifactVersion.value % "test" classifier "tests"
     ),
     (Test / javaOptions) += {
       // Create a (mini) Spark Distribution based on the server classpath.
       val serverClassPath = (connectServer / Compile / fullClasspath).value
       val distributionDir = crossTarget.value / "test-dist"
+      val jarsDir = distributionDir / "jars"
+
       if (!distributionDir.exists()) {
-        val jarsDir = distributionDir / "jars"
         IO.createDirectory(jarsDir)
-        // Create symlinks for all dependencies
-        serverClassPath.distinct.foreach { entry =>
-          val jarFile = entry.data.toPath
-          val linkedJarFile = jarsDir / entry.data.getName
-          Files.createSymbolicLink(linkedJarFile.toPath, jarFile)
+        // V2/STRICT mode requires the Delta Kernel engine at runtime
+        // (io.delta.kernel.defaults.engine.DefaultEngine), so add the packaged kernel jars.
+        val kernelJars = Seq(
+          (kernelApi / Compile / packageBin).value,
+          (kernelDefaults / Compile / packageBin).value)
+        // Create symlinks for all dependencies (filter to only JAR files)
+        (serverClassPath.map(_.data).filter(_.isFile) ++ kernelJars).distinct.foreach { jarFile =>
+          val linkedJarFile = jarsDir / jarFile.getName
+          if (!java.nio.file.Files.exists(linkedJarFile.toPath)) {
+            Files.createSymbolicLink(linkedJarFile.toPath, jarFile.toPath)
+          }
         }
         // Create a symlink for the log4j properties
         val confDir = distributionDir / "conf"
         IO.createDirectory(confDir)
-        val log4jProps = (spark / Test / resourceDirectory).value / "log4j2_spark_master.properties"
+        val log4jProps = (sparkV1 / Test / resourceDirectory).value / "log4j2.properties"
         val linkedLog4jProps = confDir / "log4j2.properties"
-        Files.createSymbolicLink(linkedLog4jProps.toPath, log4jProps.toPath)
+        if (!java.nio.file.Files.exists(linkedLog4jProps.toPath)) {
+          Files.createSymbolicLink(linkedLog4jProps.toPath, log4jProps.toPath)
+        }
       }
       // Return the location of the distribution directory.
       "-Ddelta.spark.home=" + distributionDir
     },
     // Required for testing addFeatureSupport/dropFeatureSupport.
-    Test / envVars += ("DELTA_TESTING", "1"),
+    Test / envVars += ("DELTA_TESTING", "1")
   )
 
 lazy val connectServer = (project in file("spark-connect/server"))
@@ -277,6 +266,10 @@ lazy val connectServer = (project in file("spark-connect/server"))
     commonSettings,
     releaseSettings,
     CrossSparkVersions.sparkDependentSettings(sparkVersion),
+    // Export as JAR instead of classes directory. Required for connectClient test setup so that
+    // classes like SimpleDeltaConnectService are available as a JAR file that can be symlinked
+    // and picked up by Spark Submit's jars/* wildcard. Also prevents classpath conflicts.
+    exportJars := true,
     assembly / assemblyMergeStrategy := {
       // Discard module-info.class files from Java 9+ modules and multi-release JARs
       case "module-info.class" => MergeStrategy.discard
@@ -285,38 +278,20 @@ lazy val connectServer = (project in file("spark-connect/server"))
         val oldStrategy = (assembly / assemblyMergeStrategy).value
         oldStrategy(x)
     },
-    Compile / compile := runTaskOnlyOnSparkMaster(
-      task = Compile / compile,
-      taskName = "compile",
-      projectName = "delta-connect-server",
-      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
-    ).value,
-    Test / test := runTaskOnlyOnSparkMaster(
-      task = Test / test,
-      taskName = "test",
-      projectName = "delta-connect-server",
-      emptyValue = ()
-    ).value,
-    publish := runTaskOnlyOnSparkMaster(
-      task = publish,
-      taskName = "publish",
-      projectName = "delta-connect-server",
-      emptyValue = ()
-    ).value,
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
 
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-connect" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-connect" % sparkArtifactVersion.value % "provided",
 
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-connect" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-connect" % sparkArtifactVersion.value % "test" classifier "tests",
     ),
     excludeDependencies ++= Seq(
       // Exclude connect common because a properly shaded version of it is included in the
@@ -328,6 +303,8 @@ lazy val connectServer = (project in file("spark-connect/server"))
     ),
     // Required for testing addFeatureSupport/dropFeatureSupport.
     Test / envVars += ("DELTA_TESTING", "1"),
+    // Force Spark to bind to localhost to avoid network issues
+    Test / envVars += ("SPARK_LOCAL_IP", "127.0.0.1")
   )
 
 lazy val deltaSuiteGenerator = (project in file("spark/delta-suite-generator"))
@@ -374,10 +351,10 @@ lazy val sparkV1 = (project in file("spark"))
 
     libraryDependencies ++= Seq(
       // Adding test classifier seems to break transitive resolution of the core dependencies
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
       // For DynamoDBCommitStore
       "com.amazonaws" % "aws-java-sdk" % "1.12.262" % "provided",
 
@@ -386,10 +363,10 @@ lazy val sparkV1 = (project in file("spark"))
       "org.scalatestplus" %% "scalacheck-1-15" % "3.2.9.0" % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
       "org.mockito" % "mockito-inline" % "4.11.0" % "test",
     ),
     Compile / packageBin / mappings := (Compile / packageBin / mappings).value ++
@@ -407,7 +384,41 @@ lazy val sparkV1 = (project in file("spark"))
       val dir = baseDirectory.value.getParentFile / "target" / "scala-2.13" / "classes"
       Files.createDirectories(dir.toPath)
     },
-    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir).value,
+    // Generate Python version.py file with hardcoded version.
+    // This file is committed to git and auto-updated during build.
+    generatePythonVersion := {
+      val versionValue = version.value
+      // Trim -SNAPSHOT suffix to get PyPI-compatible version (like setup.py does)
+      val trimmedVersion = versionValue.split("-SNAPSHOT")(0)
+      val versionFile = baseDirectory.value.getParentFile / "python" / "delta" / "version.py"
+      val content =
+        s"""#
+           |# Copyright (2026) The Delta Lake Project Authors.
+           |#
+           |# Licensed under the Apache License, Version 2.0 (the "License");
+           |# you may not use this file except in compliance with the License.
+           |# You may obtain a copy of the License at
+           |#
+           |# http://www.apache.org/licenses/LICENSE-2.0
+           |#
+           |# Unless required by applicable law or agreed to in writing, software
+           |# distributed under the License is distributed on an "AS IS" BASIS,
+           |# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+           |# See the License for the specific language governing permissions and
+           |# limitations under the License.
+           |#
+           |
+           |# This file is auto-generated by the build.sbt generatePythonVersion task.
+           |# Do not edit manually - edit version.sbt instead and run:
+           |#   build/sbt sparkV1/generatePythonVersion
+           |
+           |__version__ = "$trimmedVersion"
+           |""".stripMargin
+      IO.write(versionFile, content)
+      versionFile
+    },
+    // Hook both createTargetClassesDir and generatePythonVersion into compile task
+    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir dependsOn generatePythonVersion).value,
     // Generate the package object to provide the version information in runtime.
     Compile / sourceGenerators += Def.task {
       val file = (Compile / sourceManaged).value / "io" / "delta" / "package.scala"
@@ -424,7 +435,7 @@ lazy val sparkV1 = (project in file("spark"))
 
 // ============================================================
 // Spark Module 2: sparkV1Filtered (v1 without DeltaLog for v2 dependency)
-// This filtered version of sparkV1 is needed because sparkV2 (kernel-spark) depends on some
+// This filtered version of sparkV1 is needed because sparkV2 (spark/v2) depends on some
 // V1 classes for utilities and common functionality, but must NOT have access to DeltaLog,
 // Snapshot, OptimisticTransaction, or actions that belongs to core V1 delta libraries.
 // We should use Kernel as the Delta implementation.
@@ -448,58 +459,82 @@ lazy val sparkV1Filtered = (project in file("spark-v1-filtered"))
 
       // Filter out DeltaLog, Snapshot, OptimisticTransaction, and actions.scala classes
       v1Mappings.filterNot { case (file, path) =>
-        path.contains("org/apache/spark/sql/delta/DeltaLog") ||
-        path.contains("org/apache/spark/sql/delta/Snapshot") ||
-        path.contains("org/apache/spark/sql/delta/OptimisticTransaction") ||
-        path.contains("org/apache/spark/sql/delta/actions/actions")
+        path.contains("org/apache/spark/sql/delta/DeltaLog")
       }
     },
   )
 
 // ============================================================
-// Spark Module 3: sparkV2 (kernel-spark based, depends on v1-filtered)
+// Spark Module 3: sparkV2 (Kernel-based DSv2 connector, depends on v1-filtered)
 // ============================================================
-lazy val sparkV2 = (project in file("kernel-spark"))
-  .dependsOn(sparkV1Filtered)
-  .dependsOn(kernelDefaults)
-  .dependsOn(goldenTables % "test")
-  .settings(
-    name := "delta-spark-v2",
-    commonSettings,
-    javafmtCheckSettings,
-    skipReleaseSettings, // Internal module - not published to Maven
-    CrossSparkVersions.sparkDependentSettings(sparkVersion),
-    exportJars := true,  // Export as JAR to avoid classpath conflicts
+lazy val sparkV2 = {
+  // When kernelVersionOpt is set, consume the kernel from Maven instead of the
+  // local source projects: drop the project dependsOn / kernelApi unmanagedJars
+  // wiring and add the matching Maven artifacts at that version.
+  val kernelSourceDeps: Project => Project = kernelVersionOpt match {
+    case None => p => p
+      .dependsOn(kernelDefaults)
+      .dependsOn(kernelUnityCatalog % "compile->compile;test->test")
+    case Some(_) => p => p
+  }
+  val kernelDepSettings: Seq[Setting[_]] = kernelVersionOpt match {
+    case None => Seq(
+      // make sure shaded kernel-api jar exists before compiling/testing
+      Compile / compile := (Compile / compile)
+        .dependsOn(kernelApi / Compile / packageBin).value,
+      Test / test := (Test / test)
+        .dependsOn(kernelApi / Compile / packageBin).value,
+      Test / unmanagedJars += (kernelApi / Test / packageBin).value,
+      Compile / unmanagedJars ++= Seq(
+        (kernelApi / Compile / packageBin).value
+      )
+    )
+    case Some(v) => Seq(
+      libraryDependencies ++= Seq(
+        "io.delta" % "delta-kernel-api" % v,
+        "io.delta" % "delta-kernel-defaults" % v,
+        "io.delta" % "delta-kernel-unitycatalog" % v,
+        // sparkV2 tests depend on UC test helpers (InMemoryUCClient,
+        // UCCatalogManagedTestUtils) that live in kernel-unitycatalog's test sources.
+        // Consume them via the published tests-classifier jar.
+        "io.delta" % "delta-kernel-unitycatalog" % v % Test classifier "tests"
+      )
+    )
+  }
 
-    Test / javaOptions ++= Seq("-ea"),
-    // make sure shaded kernel-api jar exists before compiling/testing
-    Compile / compile := (Compile / compile)
-      .dependsOn(kernelApi / Compile / packageBin).value,
-    Test / test := (Test / test)
-      .dependsOn(kernelApi / Compile / packageBin).value,
-    Test / unmanagedJars += (kernelApi / Test / packageBin).value,
-    Compile / unmanagedJars ++= Seq(
-      (kernelApi / Compile / packageBin).value
-    ),
-    libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+  kernelSourceDeps(Project("sparkV2", file("spark/v2")).dependsOn(sparkV1Filtered))
+    .dependsOn(goldenTables % "test")
+    .settings(
+      name := "delta-spark-v2",
+      commonSettings,
+      javafmtCheckSettings,
+      skipReleaseSettings, // Internal module - not published to Maven
+      CrossSparkVersions.sparkDependentSettings(sparkVersion),
+      exportJars := true,  // Export as JAR to avoid classpath conflicts
 
-      // Test dependencies
-      "org.junit.jupiter" % "junit-jupiter-api" % "5.8.2" % "test",
-      "org.junit.jupiter" % "junit-jupiter-engine" % "5.8.2" % "test",
-      "org.junit.jupiter" % "junit-jupiter-params" % "5.8.2" % "test",
-      "net.aichler" % "jupiter-interface" % "0.11.1" % "test",
-      // Spark test classes for Scala/Java test utilities
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      // ScalaTest for test utilities (needed by Spark test classes)
-      "org.scalatest" %% "scalatest" % scalaTestVersion % "test"
-    ),
-    Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a")
-  )
+      Test / javaOptions ++= Seq("-ea"),
+      libraryDependencies ++= Seq(
+        "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+        "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+        "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
+
+        // Test dependencies
+        "org.junit.jupiter" % "junit-jupiter-api" % "5.11.4" % "test",
+        "org.junit.jupiter" % "junit-jupiter-engine" % "5.11.4" % "test",
+        "org.junit.jupiter" % "junit-jupiter-params" % "5.11.4" % "test",
+        "com.github.sbt.junit" % "jupiter-interface" % "0.17.0" % "test",
+        // Spark test classes for Scala/Java test utilities
+        "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+        "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+        "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+        // ScalaTest for test utilities (needed by Spark test classes)
+        "org.scalatest" %% "scalatest" % scalaTestVersion % "test"
+      ),
+      Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a"),
+      TestParallelization.settings
+    )
+    .settings(kernelDepSettings: _*)
+}
 
 
 // ============================================================
@@ -520,22 +555,33 @@ lazy val spark = (project in file("spark-unified"))
     // Set Test baseDirectory before sparkDependentSettings() so it uses the correct directory
     Test / baseDirectory := (sparkV1 / baseDirectory).value,
 
-    // Test sources from spark/ directory (sparkV1's directory) AND spark-unified's own directory
-    // MUST be set BEFORE crossSparkSettings() to avoid overwriting version-specific directories
+    // Test sources from spark/ directory (sparkV1's directory) AND spark-unified's own directory,
+    // plus this version's shim directories (e.g. `src/test/scala-shims/spark-4.2` and any
+    // cross-version shared dir like `src/test/scala-shims/spark-4.1-4.2`).
+    // MUST be set BEFORE crossSparkSettings() to avoid overwriting version-specific directories.
     Test / unmanagedSourceDirectories := {
       val sparkDir = (sparkV1 / baseDirectory).value
       val unifiedDir = baseDirectory.value
+      val shimDirs = CrossSparkVersions.getSparkVersionSpec()
+        .additionalSourceDirs
+        .map(dir => unifiedDir / "src" / "test" / dir)
       Seq(
         sparkDir / "src" / "test" / "scala",
         sparkDir / "src" / "test" / "java",
         unifiedDir / "src" / "test" / "scala",
         unifiedDir / "src" / "test" / "java"
-      )
+      ) ++ shimDirs
     },
     Test / unmanagedResourceDirectories := Seq(
       (sparkV1 / baseDirectory).value / "src" / "test" / "resources",
       baseDirectory.value / "src" / "test" / "resources"
     ),
+    // Shared refresh test traits compiled into both this module and the
+    // `connectClient` module. See io.delta.tables.shared.
+    Test / unmanagedSourceDirectories += {
+      (LocalRootProject / baseDirectory).value /
+        "spark-shared-tests" / "src" / "test" / "scala-shared"
+    },
 
     CrossSparkVersions.sparkDependentSettings(sparkVersion),
 
@@ -580,19 +626,39 @@ lazy val spark = (project in file("spark-unified"))
       allMappings.distinct
     },
 
-    // Exclude internal modules from published POM
+    // Exclude internal modules from published POM and add kernel dependencies.
+    // Kernel modules are transitive through sparkV2 (an internal module), so they
+    // are lost when sparkV2 is filtered out. We re-add them explicitly here.
     pomPostProcess := { node =>
       val internalModules = internalModuleNames.value
+      val ver = version.value
       import scala.xml._
       import scala.xml.transform._
+
+      def kernelDependencyNode(artifactId: String): Elem = {
+        <dependency>
+          <groupId>io.delta</groupId>
+          <artifactId>{artifactId}</artifactId>
+          <version>{ver}</version>
+        </dependency>
+      }
+
+      val kernelDeps = Seq(
+        kernelDependencyNode("delta-kernel-api"),
+        kernelDependencyNode("delta-kernel-defaults"),
+        kernelDependencyNode("delta-kernel-unitycatalog")
+      )
+
       new RuleTransformer(new RewriteRule {
         override def transform(n: Node): Seq[Node] = n match {
-          case e: Elem if e.label == "dependency" =>
-            val artifactId = (e \ "artifactId").text
-            // Check if artifactId starts with any internal module name
-            // (e.g., "delta-spark-v1_4.1_2.13" starts with "delta-spark-v1")
-            val isInternal = internalModules.exists(module => artifactId.startsWith(module))
-            if (isInternal) Seq.empty else Seq(n)
+          case e: Elem if e.label == "dependencies" =>
+            val filtered = e.child.filter {
+              case child: Elem if child.label == "dependency" =>
+                val artifactId = (child \ "artifactId").text
+                !internalModules.exists(module => artifactId.startsWith(module))
+              case _ => true
+            }
+            Seq(e.copy(child = filtered ++ kernelDeps))
           case _ => Seq(n)
         }
       }).transform(node).head
@@ -609,20 +675,24 @@ lazy val spark = (project in file("spark-unified"))
     },
 
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
       "com.amazonaws" % "aws-java-sdk" % "1.12.262" % "provided",
 
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
       "org.scalatestplus" %% "scalacheck-1-15" % "3.2.9.0" % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
+      "org.junit.jupiter" % "junit-jupiter-api" % "5.11.4" % "test",
+      "org.junit.jupiter" % "junit-jupiter-engine" % "5.11.4" % "test",
+      "org.junit.jupiter" % "junit-jupiter-params" % "5.11.4" % "test",
+      "com.github.sbt.junit" % "jupiter-interface" % "0.17.0" % "test",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
       "org.mockito" % "mockito-inline" % "4.11.0" % "test",
     ),
 
@@ -669,7 +739,10 @@ lazy val contribs = (project in file("contribs"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
-    CrossSparkVersions.sparkDependentModuleName(sparkVersion),
+    // Set sparkVersion directly (not sparkDependentModuleName) so that
+    // runOnlyForReleasableSparkModules discovers this module, but without adding a Spark
+    // suffix to the artifact name. delta-contribs is only published as delta-contribs_2.13.
+    sparkVersion := CrossSparkVersions.getSparkVersion(),
     Compile / packageBin / mappings := (Compile / packageBin / mappings).value ++
       listPythonFiles(baseDirectory.value.getParentFile / "python"),
 
@@ -702,8 +775,235 @@ lazy val contribs = (project in file("contribs"))
       val dir = baseDirectory.value.getParentFile / "target" / "scala-2.13" / "classes"
       Files.createDirectories(dir.toPath)
     },
-    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir).value
+    Compile / compile := ((Compile / compile) dependsOn createTargetClassesDir).value,
+    TestParallelization.settings
   ).configureUnidoc()
+
+
+// Unity Catalog version. Three modes, in priority order:
+//
+//  1. `-DuseDefaultUnityCatalogReleaseVersion=true`: use `defaultUnityCatalogReleaseVersion`
+//     below -- the last released UC version on Maven Central. For workflows that don't actually
+//     need DRC APIs (e.g. unidoc, lint) and want to skip the pinned UC build. Shared across
+//     workflows by reading this single constant, so bumping is a one-line change here.
+//
+//  2. Release mode: set `unityCatalogReleaseVersion = Some("0.5.0")` (or whatever released
+//     version the release branch ships against). sbt resolves the coordinate from Maven Central
+//     like any other dependency.
+//
+//  3. Pinned mode (default): leave `unityCatalogReleaseVersion = None`. The version string
+//     comes from `setup_unitycatalog_main.sh --print-version`, which encodes both the pinned
+//     UC main SHA and UC's declared base version; the script is the single source of truth.
+//     The same script (without the flag) publishes the matching jars to ~/.ivy2/local when
+//     `ensurePinnedUnityCatalog` decides they're missing.
+//
+// Override with -DunityCatalogVersion=<anything> for ad-hoc experiments.
+val unityCatalogReleaseVersion: Option[String] = None
+val defaultUnityCatalogReleaseVersion = "0.5.0"
+val useDefaultUnityCatalogReleaseVersion: Boolean =
+  sys.props.getOrElse("useDefaultUnityCatalogReleaseVersion", "false").toBoolean
+val unityCatalogSetupScript = "project/scripts/setup_unitycatalog_main.sh"
+
+// Lazy so release-mode / useDefaultUnityCatalogReleaseVersion builds never shell out.
+lazy val pinnedUnityCatalogVersion: String = {
+  import scala.sys.process._
+  Process(Seq("bash", unityCatalogSetupScript, "--print-version")).!!.trim
+}
+val unityCatalogVersion: String = sys.props.getOrElse(
+  "unityCatalogVersion",
+  if (useDefaultUnityCatalogReleaseVersion) defaultUnityCatalogReleaseVersion
+  else unityCatalogReleaseVersion.getOrElse(pinnedUnityCatalogVersion))
+
+// UC publishes its Spark connector per Spark major.minor (e.g. unitycatalog-spark_4.1). This
+// is the artifact name without the Scala suffix - sbt's `%%` appends `_2.13` for dep
+// resolution; the canary check below appends `_2.13` explicitly for the Ivy/Maven path.
+val unityCatalogSparkArtifactName: String =
+  s"unitycatalog-spark_${CrossSparkVersions.getSparkVersionSpec().shortVersion}"
+
+/**
+ * Returns true when `current` is at least `target`. Numeric segments only; suffix after
+ * the first `-` (e.g. `-SNAPSHOT-abc1234`) is stripped before comparison.
+ */
+def isAtLeastVersion(current: String, target: String): Boolean = {
+  def parts(v: String): Seq[Int] =
+    v.takeWhile(_ != '-').split('.').iterator
+      .map(p => scala.util.Try(p.toInt).getOrElse(0)).toSeq
+  val cur = parts(current)
+  val tgt = parts(target)
+  val n = math.max(cur.length, tgt.length)
+  (0 until n).iterator
+    .map(i => (cur.lift(i).getOrElse(0), tgt.lift(i).getOrElse(0)))
+    .find { case (a, b) => a != b }
+    .forall { case (a, b) => a >= b }
+}
+
+val sparkUnityCatalogJacksonVersion = "2.15.4" // We are using Spark 4.0's Jackson version 2.15.x, to override Unity Catalog 0.3.0's version 2.18.x
+
+// Publishes the pinned UC jars to ~/.ivy2/local if they're not already cached there. Hooked
+// into `update` on the UC-dependent projects below, so plain `sbt testOnly ...` on a clean
+// checkout just works. No-op in release mode. Opt out with
+// `-Ddelta.autoBuildPinnedUnityCatalog=false`, in which case sbt errors with a pointer to the
+// setup script.
+val ensurePinnedUnityCatalog = taskKey[Unit](
+  "Publish the pinned UC jars locally if the Ivy coordinate isn't already cached.")
+
+// Extracted so the task body can read as a short guard rather than three nested ifs.
+def publishPinnedUnityCatalog(log: sbt.util.Logger, canary: java.io.File): Unit = {
+  val shouldAutoBuild =
+    sys.props.getOrElse("delta.autoBuildPinnedUnityCatalog", "true").toBoolean
+  if (!shouldAutoBuild) {
+    sys.error(
+      s"""|Pinned Unity Catalog jars are not published locally for coordinate
+          |$unityCatalogVersion.
+          |Auto-build is disabled (-Ddelta.autoBuildPinnedUnityCatalog=false).
+          |Run: bash $unityCatalogSetupScript""".stripMargin)
+  }
+  log.info(s"[UC] Pinned UC jars not found for coordinate $unityCatalogVersion.")
+  log.info(
+    s"[UC] Running $unityCatalogSetupScript - takes ~3-5 minutes on a cold cache, <1s on a warm one.")
+  import scala.sys.process._
+  val procLogger = ProcessLogger(
+    line => log.info(s"[UC setup] $line"),
+    line => log.warn(s"[UC setup] $line"))
+  // SPARK_VERSION tells the script which Spark variant to build (forwarded to UC's sbt as
+  // -DsparkVersion).
+  val exit = Process(
+    Seq("bash", unityCatalogSetupScript),
+    None,
+    "SPARK_VERSION" -> CrossSparkVersions.getSparkVersionSpec().shortVersion).!(procLogger)
+  if (exit != 0) {
+    sys.error(
+      s"[UC] $unityCatalogSetupScript exited with code $exit. Run it manually to see full output.")
+  }
+  if (!canary.exists) {
+    sys.error(
+      s"[UC] $unityCatalogSetupScript succeeded but ${canary.getAbsolutePath} is still missing - " +
+        "the publish target layout may have changed.")
+  }
+}
+
+Global / ensurePinnedUnityCatalog := {
+  // Resolve the .value dependencies eagerly - sbt's task macro warns when
+  // `.value` appears inside conditional branches.
+  val log = streams.value.log
+  // No-op whenever the effective version resolves to something Maven Central can serve:
+  // release mode, -DuseDefaultUnityCatalogReleaseVersion=true, or -DunityCatalogVersion=<released>.
+  val usingReleasedVersion = useDefaultUnityCatalogReleaseVersion ||
+    sys.props.contains("unityCatalogVersion")
+  if (unityCatalogReleaseVersion.isEmpty && !usingReleasedVersion) {
+    val home = file(sys.props("user.home"))
+    // Canary on the spark artifact, not client/server: those are Spark-version-independent and
+    // would short-circuit the trigger when only the active Spark version changed, leaving the
+    // needed unitycatalog-spark_${X.Y}_2.13 unpublished.
+    val sparkArtifact = s"${unityCatalogSparkArtifactName}_2.13"
+    // Check both layouts: a restored sbt cache can pre-populate ivy alone, leaving m2 empty -
+    // checking only ivy would silently skip the slow publish and break mvn-based consumers.
+    val ivy2Canary = home / ".ivy2" / "local" / "io.unitycatalog" /
+      sparkArtifact / unityCatalogVersion / "ivys" / "ivy.xml"
+    val m2Canary = home / ".m2" / "repository" / "io" / "unitycatalog" /
+      sparkArtifact / unityCatalogVersion /
+      s"$sparkArtifact-$unityCatalogVersion.pom"
+    if (!ivy2Canary.exists || !m2Canary.exists) {
+      publishPinnedUnityCatalog(log, ivy2Canary)
+    }
+  }
+}
+
+lazy val sparkUnityCatalog = (project in file("spark/unitycatalog"))
+  .dependsOn(spark % "compile->compile;test->test;provided->provided")
+  .disablePlugins(ScalafmtPlugin)
+  .settings(
+    name := "delta-spark-unitycatalog",
+    commonSettings,
+    skipReleaseSettings,
+    javafmtCheckSettings(),
+    CrossSparkVersions.sparkDependentSettings(sparkVersion),
+
+    // Publish the pinned UC jars before sbt tries to resolve them.
+    update := update.dependsOn(ensurePinnedUnityCatalog).value,
+
+    // This is a test-only module - no production sources
+    Compile / sources := Seq.empty,
+
+    // Ensure Java sources are picked up
+    Test / unmanagedSourceDirectories += baseDirectory.value / "src" / "test" / "java",
+
+    Test / javaOptions ++= Seq("-ea"),
+
+    // Don't execute in parallel since we can't have multiple Sparks in the same JVM
+    Test / parallelExecution := false,
+
+    // Force ALL Jackson dependencies to match Spark's Jackson version
+    // This overrides Jackson from Unity Catalog's transitive dependencies (e.g., Armeria)
+    dependencyOverrides ++= Seq(
+      "com.fasterxml.jackson.core" % "jackson-core" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.core" % "jackson-annotations" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.core" % "jackson-databind" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.module" %% "jackson-module-scala" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.dataformat" % "jackson-dataformat-yaml" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.datatype" % "jackson-datatype-jsr310" % sparkUnityCatalogJacksonVersion,
+      "com.fasterxml.jackson.datatype" % "jackson-datatype-jdk8" % sparkUnityCatalogJacksonVersion
+    ),
+
+    libraryDependencies ++= Seq(
+      "org.assertj" % "assertj-core" % "3.26.3" % "test",
+      // JUnit 5 test dependencies
+      "org.junit.jupiter" % "junit-jupiter-api" % "5.11.4" % "test",
+      "org.junit.jupiter" % "junit-jupiter-engine" % "5.11.4" % "test",
+      "org.junit.jupiter" % "junit-jupiter-params" % "5.11.4" % "test",
+      "com.github.sbt.junit" % "jupiter-interface" % "0.17.0" % "test",
+      // Lombok for generating boilerplate code
+      "org.projectlombok" % "lombok" % "1.18.34" % "test",
+
+      // Unity Catalog dependencies - per-Spark-version artifact (unitycatalog-spark_4.X_2.13).
+      // Exclude Jackson to use Spark's Jackson 2.15.x
+      "io.unitycatalog" %% s"unitycatalog-spark_${CrossSparkVersions.getSparkVersionSpec().shortVersion}" % unityCatalogVersion % "test" excludeAll(
+        ExclusionRule(organization = "com.fasterxml.jackson.core"),
+        ExclusionRule(organization = "com.fasterxml.jackson.module"),
+        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
+        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+      ),
+      "io.unitycatalog" % "unitycatalog-server" % unityCatalogVersion % "test" excludeAll(
+        ExclusionRule(organization = "com.fasterxml.jackson.core"),
+        ExclusionRule(organization = "com.fasterxml.jackson.module"),
+        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
+        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+      ),
+
+      // Spark test dependencies
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test",
+    ),
+
+    // Conditionally add hadoop-aws dependency only when UC_REMOTE=true
+    // Please see: https://github.com/delta-io/delta/issues/5624#issuecomment-3673383736
+    // Once we release the relocated unitycatalog-server, we can remove this.
+    libraryDependencies ++= {
+      if (sys.env.get("UC_REMOTE").contains("true")) {
+        Seq(
+          "org.apache.hadoop" % "hadoop-aws" % hadoopVersion % "test",
+          "org.apache.hadoop" % "hadoop-common" % hadoopVersion % "test",
+          "org.apache.hadoop" % "hadoop-client-api" % hadoopVersion % "test",
+          "org.apache.hadoop" % "hadoop-client-runtime" % hadoopVersion % "test"
+        )
+      } else {
+        Seq.empty
+      }
+    },
+
+    // Add delta-iceberg compiled classes so that UniForm Iceberg conversion works in integration
+    // tests.
+    Test / unmanagedJars ++= {
+      if (supportIceberg) Seq(
+        Attributed.blank((iceberg / Compile / packageBin).value)
+      ) else Seq.empty
+    },
+
+    Test / javaOptions += s"-DsupportIceberg=${supportIceberg}",
+    Test / testOptions += Tests.Argument("-oDF"),
+    Test / testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a")
+  )
 
 lazy val sharing = (project in file("sharing"))
   .dependsOn(spark % "compile->compile;test->test;provided->provided")
@@ -715,37 +1015,22 @@ lazy val sharing = (project in file("sharing"))
     releaseSettings,
     CrossSparkVersions.sparkDependentSettings(sparkVersion),
     Test / javaOptions ++= Seq("-ea"),
-    Compile / compile := runTaskOnlyOnSparkMaster(
-      task = Compile / compile,
-      taskName = "compile",
-      projectName = "delta-sharing-spark",
-      emptyValue = Analysis.empty.asInstanceOf[CompileAnalysis]
-    ).value,
-    Test / test := runTaskOnlyOnSparkMaster(
-      task = Test / test,
-      taskName = "test",
-      projectName = "delta-sharing-spark",
-      emptyValue = ()).value,
-    publish := runTaskOnlyOnSparkMaster(
-      task = publish,
-      taskName = "publish",
-      projectName = "delta-sharing-spark",
-      emptyValue = ()).value,
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
 
-      "io.delta" %% "delta-sharing-client" % "1.3.6",
+      "io.delta" %% "delta-sharing-client" % "1.4.1",
 
       // Test deps
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
       "org.scalatestplus" %% "scalacheck-1-15" % "3.2.9.0" % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
-    )
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
+    ),
+    TestParallelization.settings
   ).configureUnidoc()
 
 lazy val kernelApi = (project in file("kernel/kernel-api"))
@@ -783,8 +1068,8 @@ lazy val kernelApi = (project in file("kernel/kernel-api"))
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
-      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.25.3" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.25.3" % "test",
       "org.assertj" % "assertj-core" % "3.26.3" % "test",
       // JMH dependencies allow writing micro-benchmarks for testing performance of components.
       // JMH has framework to define benchmarks and takes care of many common functionalities
@@ -810,8 +1095,8 @@ lazy val kernelApi = (project in file("kernel/kernel-api"))
     ),
     assembly / assemblyMergeStrategy := {
       // Discard `module-info.class` to fix the `different file contents found` error.
-      // TODO Upgrade SBT to 1.5 which will do this automatically
       case "module-info.class" => MergeStrategy.discard
+      case PathList("META-INF", "versions", _*) => MergeStrategy.discard
       case PathList("META-INF", "services", xs @ _*) => MergeStrategy.discard
       case x =>
         val oldStrategy = (assembly / assemblyMergeStrategy).value
@@ -885,25 +1170,27 @@ lazy val kernelDefaults = (project in file("kernel/kernel-defaults"))
       "org.apache.hadoop" % "hadoop-client-runtime" % hadoopVersion,
       "com.fasterxml.jackson.core" % "jackson-databind" % "2.13.5",
       "com.fasterxml.jackson.datatype" % "jackson-datatype-jdk8" % "2.13.5",
-      "org.apache.parquet" % "parquet-hadoop" % "1.12.3",
+      "org.apache.parquet" % "parquet-hadoop" % "1.16.0",
 
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "commons-io" % "commons-io" % "2.8.0" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
-      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.25.3" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.25.3" % "test",
       // JMH dependencies allow writing micro-benchmarks for testing performance of components.
       // JMH has framework to define benchmarks and takes care of many common functionalities
       // such as warm runs, cold runs, defining benchmark parameter variables etc.
       "org.openjdk.jmh" % "jmh-core" % "1.37" % "test",
       "org.openjdk.jmh" % "jmh-generator-annprocess" % "1.37" % "test",
-      "io.delta" %% "delta-spark" % "3.3.2" % "test",
 
-      "org.apache.spark" %% "spark-hive" % defaultSparkVersion % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % defaultSparkVersion % "test" classifier "tests",
-      "org.apache.spark" %% "spark-catalyst" % defaultSparkVersion % "test" classifier "tests",
+      // The delta-spark and spark dependencies are mainly used for catalog-based table creation.
+      // Instead of using the latest snapshot, those are fine to use the released 4.0.0.
+      "io.delta" %% "delta-spark" % "4.0.0" % "test",
+      "org.apache.spark" %% "spark-hive" % sparkVersionForKernelTest % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkVersionForKernelTest % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkVersionForKernelTest % "test" classifier "tests",
+      "org.apache.spark" %% "spark-catalyst" % sparkVersionForKernelTest % "test" classifier "tests",
     ),
     MultiShardMultiJVMTestParallelization.settings,
     javaCheckstyleSettings("dev/kernel-checkstyle.xml"),
@@ -924,7 +1211,7 @@ lazy val kernelBenchmarks = (project in file("kernel/kernel-benchmarks"))
     exportJars := false,
     javafmtCheckSettings,
     scalafmtCheckSettings,
-    
+
     libraryDependencies ++= Seq(
       "org.openjdk.jmh" % "jmh-core" % "1.37" % "test",
       "org.openjdk.jmh" % "jmh-generator-annprocess" % "1.37" % "test",
@@ -944,6 +1231,14 @@ lazy val kernelUnityCatalog = (project in file("kernel/unitycatalog"))
     scalaStyleSettings,
     scalafmtCheckSettings,
 
+    // Publish the pinned UC jars before sbt tries to resolve them.
+    update := update.dependsOn(ensurePinnedUnityCatalog).value,
+
+    // Also publish a test-jar (classifier = "tests") so consumers (e.g. sparkV2 in
+    // Maven mode) can depend on UC test helpers (InMemoryUCClient,
+    // UCCatalogManagedTestUtils) via a published artifact.
+    Test / publishArtifact := true,
+
     // Put the shaded kernel-api JAR on the classpath (compile & test)
     Compile / unmanagedJars += (kernelApi / Compile / packageBin).value,
     Test / unmanagedJars += (kernelApi / Compile / packageBin).value,
@@ -956,8 +1251,8 @@ lazy val kernelUnityCatalog = (project in file("kernel/unitycatalog"))
     libraryDependencies ++= Seq(
       "org.apache.hadoop" % "hadoop-common" % hadoopVersion % "provided",
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
-      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.20.0" % "test",
-      "org.apache.logging.log4j" % "log4j-core" % "2.20.0" % "test",
+      "org.apache.logging.log4j" % "log4j-slf4j-impl" % "2.25.3" % "test",
+      "org.apache.logging.log4j" % "log4j-core" % "2.25.3" % "test",
     ),
     unidocSourceFilePatterns += SourceFilePattern("src/main/java/io/delta/unity/"),
   ).configureUnidoc()
@@ -980,13 +1275,41 @@ lazy val storage = (project in file("storage"))
       // Note that the org.apache.hadoop.fs.s3a.Listing::createFileStatusListingIterator 3.3.1 API
       // is not compatible with 3.3.2.
       "org.apache.hadoop" % "hadoop-aws" % hadoopVersion % "provided",
+      "io.unitycatalog" % "unitycatalog-client" % unityCatalogVersion excludeAll(
+        ExclusionRule(organization = "org.openapitools"),
+        ExclusionRule(organization = "com.fasterxml.jackson.core"),
+        ExclusionRule(organization = "com.fasterxml.jackson.module"),
+        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
+        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+      ),
 
       // Test Deps
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
+      // Jackson datatype module needed for UC SDK tests (excluded from main compile scope)
+      "com.fasterxml.jackson.datatype" % "jackson-datatype-jsr310" % "2.15.4" % "test",
+    ) ++ (
+      // unitycatalog-hadoop ships from UC 0.5.0 onward; older versions don't publish the
+      // artifact, so resolving it would fail. Used by UCDeltaTokenBasedRestClient for
+      // credential vending via UCCredentialHadoopConfs.
+      if (isAtLeastVersion(unityCatalogVersion, "0.5.0")) {
+        Seq("io.unitycatalog" % "unitycatalog-hadoop" % unityCatalogVersion excludeAll(
+          ExclusionRule(organization = "org.openapitools"),
+          ExclusionRule(organization = "com.fasterxml.jackson.core"),
+          ExclusionRule(organization = "com.fasterxml.jackson.module"),
+          ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
+          ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+        ))
+      } else Nil
     ),
+
+    // Publish the pinned UC jars before sbt tries to resolve them. storage is the transitive
+    // UC-client entry point for most of the build graph (sparkV1, sparkV2, kernelDefaults, etc.
+    // all .dependsOn(storage)), so hooking here covers nearly every compile path.
+    update := update.dependsOn(ensurePinnedUnityCatalog).value,
 
     // Unidoc settings
     unidocSourceFilePatterns += SourceFilePattern("/LogStore.java", "/CloseableIterator.java"),
+    TestParallelization.settings
   ).configureUnidoc()
 
 lazy val storageS3DynamoDB = (project in file("storage-s3-dynamodb"))
@@ -1007,11 +1330,13 @@ lazy val storageS3DynamoDB = (project in file("storage-s3-dynamodb"))
 
       // Test Deps
       "org.apache.hadoop" % "hadoop-aws" % hadoopVersion % "test", // RemoteFileChangedException
-    )
+    ),
+    TestParallelization.settings
   ).configureUnidoc()
 
 val icebergSparkRuntimeArtifactName = {
- val (expMaj, expMin, _) = getMajorMinorPatch(defaultSparkVersion)
+ val currentSparkVersion = CrossSparkVersions.getSparkVersion()
+ val (expMaj, expMin, _) = getMajorMinorPatch(currentSparkVersion)
  s"iceberg-spark-runtime-$expMaj.$expMin"
 }
 
@@ -1035,12 +1360,23 @@ lazy val testDeltaIcebergJar = (project in file("testDeltaIcebergJar"))
 val deltaIcebergSparkIncludePrefixes = Seq(
   // We want everything from this package
   "org/apache/spark/sql/delta/icebergShaded",
+  // Server-side planning support
+  "org/apache/spark/sql/delta/serverSidePlanning",
 
   // We only want the files in this project from this package. e.g. we want to exclude
   // org/apache/spark/sql/delta/commands/convert/ConvertTargetFile.class (from delta-spark project).
+  "org/apache/spark/sql/delta/commands/convert/DataFileWrapper",
+  "org/apache/spark/sql/delta/commands/convert/DelegatingIcebergTable",
   "org/apache/spark/sql/delta/commands/convert/IcebergFileManifest",
+  "org/apache/spark/sql/delta/commands/convert/IcebergPartitionConverter",
   "org/apache/spark/sql/delta/commands/convert/IcebergSchemaUtils",
-  "org/apache/spark/sql/delta/commands/convert/IcebergTable"
+  "org/apache/spark/sql/delta/commands/convert/IcebergSparkWrappers",
+  "org/apache/spark/sql/delta/commands/convert/IcebergStatsUtils",
+  "org/apache/spark/sql/delta/commands/convert/IcebergTable",
+  "org/apache/spark/sql/delta/commands/convert/IcebergTableLike",
+  "org/apache/spark/sql/delta/commands/convert/ManifestFileWrapper",
+  "org/apache/spark/sql/delta/commands/convert/PartitionFieldSummaryWrapper",
+  "org/apache/spark/sql/delta/commands/convert/TypeToSparkTypeWithCustomCast"
 )
 
 // Build using: build/sbt clean icebergShaded/compile iceberg/compile
@@ -1054,17 +1390,43 @@ lazy val iceberg = (project in file("iceberg"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
-    CrossSparkVersions.sparkDependentModuleName(sparkVersion),
-    libraryDependencies ++= Seq(
-      // Fix Iceberg's legacy java.lang.NoClassDefFoundError: scala/jdk/CollectionConverters$ error
-      // due to legacy scala.
-      "org.scala-lang.modules" %% "scala-collection-compat" % "2.1.1",
-      "org.apache.iceberg" %% icebergSparkRuntimeArtifactName % "1.4.0" % "provided",
-      "com.github.ben-manes.caffeine" % "caffeine" % "2.9.3"
-    ),
+    // Set sparkVersion directly (not sparkDependentModuleName) so that
+    // runOnlyForReleasableSparkModules discovers this module, but without adding a Spark
+    // suffix to the artifact name. delta-iceberg is only published as delta-iceberg_2.13.
+    sparkVersion := CrossSparkVersions.getSparkVersion(),
+    libraryDependencies ++= {
+      if (supportIceberg) {
+        Seq(
+          // Fix Iceberg's legacy java.lang.NoClassDefFoundError: scala/jdk/CollectionConverters$ error
+          // due to legacy scala.
+          "org.scala-lang.modules" %% "scala-collection-compat" % "2.1.1",
+          "com.github.ben-manes.caffeine" % "caffeine" % "2.9.3",
+          "com.jolbox" % "bonecp" % "0.8.0.RELEASE" % "test",
+          "org.eclipse.jetty" % "jetty-server" % "11.0.26" % "test",
+          "org.eclipse.jetty" % "jetty-servlet" % "11.0.26" % "test",
+          "org.xerial" % "sqlite-jdbc" % "3.45.0.0" % "test",
+          "org.apache.httpcomponents.core5" % "httpcore5" % "5.2.4" % "test",
+          "org.apache.httpcomponents.client5" % "httpclient5" % "5.3.1" % "test",
+          "org.apache.iceberg" %% icebergSparkRuntimeArtifactName % "1.11.0" % "provided",
+          // For FixedGcsAccessTokenProvider (GCS server-side planning credentials)
+          "com.google.cloud.bigdataoss" % "util-hadoop" % gcsConnectorVersion % "provided"
+        )
+      } else {
+        Seq.empty
+      }
+    },
+    // Skip compilation and publishing when supportIceberg is false
+    Compile / skip := !supportIceberg,
+    Test / skip := !supportIceberg,
+    publish / skip := !supportIceberg,
+    publishLocal / skip := !supportIceberg,
+    publishM2 / skip := !supportIceberg,
     Compile / unmanagedJars += (icebergShaded / assembly).value,
     // Generate the assembly JAR as the package JAR
     Compile / packageBin := assembly.value,
+    Compile / scalacOptions += "-nowarn",
+    Test / unmanagedJars += (icebergTestsShaded / assembly).value,
+    Test / scalacOptions += "-nowarn",
     assembly / assemblyJarName := {
       s"${moduleName.value}_${scalaBinaryVersion.value}-${version.value}.jar"
     },
@@ -1116,7 +1478,7 @@ lazy val iceberg = (project in file("iceberg"))
   )
 // scalastyle:on println
 
-val icebergShadedVersion = "1.10.0"
+val icebergShadedVersion = "1.11.0"
 lazy val icebergShaded = (project in file("icebergShaded"))
   .dependsOn(spark % "provided")
   .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
@@ -1166,6 +1528,39 @@ lazy val icebergShaded = (project in file("icebergShaded"))
     assemblyPackageScala / assembleArtifact := false,
   )
 
+lazy val icebergTestsShaded = (project in file("icebergTestsShaded"))
+  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
+  .settings (
+    name := "iceberg-tests-shaded",
+    commonSettings,
+    skipReleaseSettings,
+    // must exclude all dependencies from Iceberg that delta-spark includes
+    libraryDependencies ++= Seq(
+      "org.apache.iceberg" % "iceberg-core" % icebergShadedVersion classifier "tests" excludeAll (
+        icebergExclusionRules: _*
+      ),
+    ),
+    // Generated shaded Iceberg JARs
+    Compile / packageBin := assembly.value,
+    assembly / assemblyJarName := s"${name.value}_${scalaBinaryVersion.value}-${version.value}.jar",
+    assembly / logLevel := Level.Info,
+    assembly / test := {},
+    assembly / assemblyShadeRules := Seq(
+      ShadeRule.rename("org.apache.iceberg.**" -> "shadedForDelta.@0").inAll
+    ),
+    assembly / assemblyExcludedJars := {
+      val cp = (fullClasspath in assembly).value
+      cp.filter { jar =>
+        val doExclude = jar.data.getName.contains("jackson-annotations") ||
+          jar.data.getName.contains("RoaringBitmap")
+        doExclude
+      }
+    },
+    assembly / assemblyMergeStrategy := updateMergeStrategy((assembly / assemblyMergeStrategy).value),
+    assemblyPackageScala / assembleArtifact := false,
+  )
+
+
 lazy val hudi = (project in file("hudi"))
   .dependsOn(spark % "compile->compile;test->test;provided->provided")
   .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
@@ -1174,14 +1569,30 @@ lazy val hudi = (project in file("hudi"))
     commonSettings,
     scalaStyleSettings,
     releaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hudi" % "hudi-java-client" % "0.15.0" % "compile" excludeAll(
-        ExclusionRule(organization = "org.apache.hadoop"),
-        ExclusionRule(organization = "org.apache.zookeeper"),
-      ),
-      "org.apache.spark" %% "spark-avro" % defaultSparkVersion % "test" excludeAll ExclusionRule(organization = "org.apache.hadoop"),
-      "org.apache.parquet" % "parquet-avro" % "1.12.3" % "compile"
-    ),
+    // Set sparkVersion directly (not sparkDependentModuleName) so that
+    // runOnlyForReleasableSparkModules discovers this module, but without adding a Spark
+    // suffix to the artifact name. delta-hudi is only published as delta-hudi_2.13.
+    sparkVersion := CrossSparkVersions.getSparkVersion(),
+    libraryDependencies ++= {
+      if (supportHudi) {
+        Seq(
+          "org.apache.hudi" % "hudi-java-client" % "0.15.0" % "compile" excludeAll(
+            ExclusionRule(organization = "org.apache.hadoop"),
+            ExclusionRule(organization = "org.apache.zookeeper"),
+          ),
+          "org.apache.spark" %% "spark-avro" % sparkArtifactVersion.value % "test" excludeAll ExclusionRule(organization = "org.apache.hadoop"),
+          "org.apache.parquet" % "parquet-avro" % "1.16.0" % "compile"
+        )
+      } else {
+        Seq.empty
+      }
+    },
+    // Skip compilation and publishing when supportHudi is false
+    Compile / skip := !supportHudi,
+    Test / skip := !supportHudi,
+    publish / skip := !supportHudi,
+    publishLocal / skip := !supportHudi,
+    publishM2 / skip := !supportHudi,
     assembly / assemblyJarName := s"${name.value}-assembly_${scalaBinaryVersion.value}-${version.value}.jar",
     assembly / logLevel := Level.Info,
     assembly / test := {},
@@ -1215,242 +1626,93 @@ lazy val hudi = (project in file("hudi"))
         MergeStrategy.first
     },
     // Make the 'compile' invoke the 'assembly' task to generate the uber jar.
-    Compile / packageBin := assembly.value
+    Compile / packageBin := assembly.value,
+    TestParallelization.settings
   )
 
-/**
- * We want to publish the `standalone` project's shaded JAR (created from the
- * build/sbt standalone/assembly command).
- *
- * However, build/sbt standalone/publish and build/sbt standalone/publishLocal will use the
- * non-shaded JAR from the build/sbt standalone/package command.
- *
- * So, we create an impostor, cosmetic project used only for publishing.
- *
- * build/sbt standalone/package
- * - creates connectors/standalone/target/scala-2.12/delta-standalone-original-shaded_2.12-0.2.1-SNAPSHOT.jar
- *   (this is the shaded JAR we want)
- *
- * build/sbt standaloneCosmetic/publishM2
- * - packages the shaded JAR (above) and then produces:
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT.pom
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT.jar
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT-sources.jar
- * -- .m2/repository/io/delta/delta-standalone_2.12/0.2.1-SNAPSHOT/delta-standalone_2.12-0.2.1-SNAPSHOT-javadoc.jar
- */
-lazy val standaloneCosmetic = project
-  .dependsOn(storage) // this doesn't impact the output artifact (jar), only the pom.xml dependencies
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
+lazy val flink = (project in file("flink"))
+//  .dependsOn(kernelApi)
+  .dependsOn(kernelDefaults)
+  .dependsOn(kernelUnityCatalog)
   .settings(
-    name := "delta-standalone",
+    name := "delta-flink",
     commonSettings,
     releaseSettings,
-    exportJars := true,
-    Compile / packageBin := (standaloneParquet / assembly).value,
-    Compile / packageSrc := (standalone / Compile / packageSrc).value,
-    libraryDependencies ++= scalaCollectionPar(scalaVersion.value) ++ Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion % "provided",
-      "org.apache.parquet" % "parquet-hadoop" % "1.12.3" % "provided",
-      // parquet4s-core dependencies that are not shaded are added with compile scope.
-      "com.chuusai" %% "shapeless" % "2.3.4",
-      "org.scala-lang.modules" %% "scala-collection-compat" % "2.4.3"
-    )
-  )
-
-lazy val testStandaloneCosmetic = (project in file("connectors/testStandaloneCosmetic"))
-  .dependsOn(standaloneCosmetic)
-  .dependsOn(goldenTables % "test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "test-standalone-cosmetic",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion,
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-    )
-  )
-
-/**
- * A test project to verify `ParquetSchemaConverter` APIs are working after the user provides
- * `parquet-hadoop`. We use a separate project because we want to test whether Delta Standlone APIs
- * except `ParquetSchemaConverter` are working without `parquet-hadoop` in testStandaloneCosmetic`.
- */
-lazy val testParquetUtilsWithStandaloneCosmetic = project.dependsOn(standaloneCosmetic)
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "test-parquet-utils-with-standalone-cosmetic",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion,
-      "org.apache.parquet" % "parquet-hadoop" % "1.12.3" % "provided",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-    )
-  )
-
-def scalaCollectionPar(version: String) = version match {
-  case v if v.startsWith("2.13.") =>
-    Seq("org.scala-lang.modules" %% "scala-parallel-collections" % "1.0.4")
-  case _ => Seq()
-}
-
-/**
- * The public API ParquetSchemaConverter exposes Parquet classes in its methods so we cannot apply
- * shading rules on it. However, sbt-assembly doesn't allow excluding a single file. Hence, we
- * create a separate project to skip the shading.
- */
-lazy val standaloneParquet = (project in file("connectors/standalone-parquet"))
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .dependsOn(standaloneWithoutParquetUtils)
-  .settings(
-    name := "delta-standalone-parquet",
-    commonSettings,
-    skipReleaseSettings,
-    libraryDependencies ++= Seq(
-      "org.apache.parquet" % "parquet-hadoop" % "1.12.3" % "provided",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test"
-    ),
-    assemblyPackageScala / assembleArtifact := false
-  )
-
-/** A dummy project to allow `standaloneParquet` depending on the shaded standalone jar. */
-lazy val standaloneWithoutParquetUtils = project
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "delta-standalone-without-parquet-utils",
-    commonSettings,
-    skipReleaseSettings,
-    exportJars := true,
-    Compile / packageBin := (standalone / assembly).value
-  )
-
-// TODO scalastyle settings
-lazy val standalone = (project in file("connectors/standalone"))
-  .dependsOn(storage % "compile->compile;provided->provided")
-  .dependsOn(goldenTables % "test")
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings(
-    name := "delta-standalone-original",
-    commonSettings,
-    skipReleaseSettings,
-    standaloneMimaSettings,
-    // When updating any dependency here, we should also review `pomPostProcess` in project
-    // `standaloneCosmetic` and update it accordingly.
-    libraryDependencies ++= scalaCollectionPar(scalaVersion.value) ++ Seq(
-      "org.apache.hadoop" % "hadoop-client" % hadoopVersion % "provided",
-      "com.github.mjakubowski84" %% "parquet4s-core" % parquet4sVersion excludeAll (
-        ExclusionRule("org.slf4j", "slf4j-api")
-        ),
-      "com.fasterxml.jackson.module" %% "jackson-module-scala" % "2.12.3",
-      "org.json4s" %% "json4s-jackson" % "3.7.0-M11" excludeAll (
-        ExclusionRule("com.fasterxml.jackson.core"),
-        ExclusionRule("com.fasterxml.jackson.module")
-      ),
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-    ),
-    Compile / sourceGenerators += Def.task {
-      val file = (Compile / sourceManaged).value / "io" / "delta" / "standalone" / "package.scala"
-      IO.write(file,
-        s"""package io.delta
-           |
-           |package object standalone {
-           |  val VERSION = "${version.value}"
-           |  val NAME = "Delta Standalone"
-           |}
-           |""".stripMargin)
-      Seq(file)
+    javafmtCheckSettings(),
+    publishArtifact := scalaBinaryVersion.value == "2.13", // only publish once
+    autoScalaLibrary := false, // exclude scala-library from dependencies
+    assembly / assemblyJarName := s"delta-flink-$flinkVersion-${version.value}.jar",
+    assembly / assemblyMergeStrategy := {
+      // Discard module-info.class files from Java 9+ modules and multi-release JARs
+      case "module-info.class" => MergeStrategy.discard
+      case "parquet.thrift" => MergeStrategy.discard
+      case PathList("META-INF", "versions", _, "module-info.class") => MergeStrategy.discard
+      case PathList("mozilla", "public-suffix-list.txt") => MergeStrategy.discard
+      case x => MergeStrategy.first
     },
-
-    /**
-     * Standalone packaged (unshaded) jar.
-     *
-     * Build with `build/sbt standalone/package` command.
-     * e.g. connectors/standalone/target/scala-2.12/delta-standalone-original-unshaded_2.12-0.2.1-SNAPSHOT.jar
-     */
-    artifactName := { (sv: ScalaVersion, module: ModuleID, artifact: Artifact) =>
-      artifact.name + "-unshaded" + "_" + sv.binary + "-" + module.revision  + "." + artifact.extension
-    },
-
-    /**
-     * Standalone assembly (shaded) jar. This is what we want to release.
-     *
-     * Build with `build/sbt standalone/assembly` command.
-     * e.g. connectors/standalone/target/scala-2.12/delta-standalone-original-shaded_2.12-0.2.1-SNAPSHOT.jar
-     */
-    assembly / logLevel := Level.Info,
-    assembly / test := {},
-    assembly / assemblyJarName := s"${name.value}-shaded_${scalaBinaryVersion.value}-${version.value}.jar",
-    // We exclude jars first, and then we shade what is remaining. Note: the input here is only
-    // `libraryDependencies` jars, not `.dependsOn(_)` jars.
     assembly / assemblyExcludedJars := {
       val cp = (assembly / fullClasspath).value
-      val allowedPrefixes = Set("META_INF", "io", "json4s", "jackson", "paranamer",
-        "parquet4s", "parquet-", "audience-annotations", "commons-pool")
-      cp.filter { f =>
-        !allowedPrefixes.exists(prefix => f.data.getName.startsWith(prefix))
+      cp.filter { entry =>
+        entry.data.getName.startsWith("bundle-") &&
+          entry.data.getName.endsWith(".jar")
       }
     },
-    assembly / assemblyShadeRules := Seq(
-      ShadeRule.rename("com.fasterxml.jackson.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("com.thoughtworks.paranamer.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.json4s.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("com.github.mjakubowski84.parquet4s.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.apache.commons.pool.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.apache.parquet.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("shaded.parquet.**" -> "shadedelta.@0").inAll,
-      ShadeRule.rename("org.apache.yetus.audience.**" -> "shadedelta.@0").inAll
+    Compile / unmanagedJars += (kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Compile / packageBin).value,
+
+    // Make sure the shaded JAR is produced before we compile/run tests
+    Compile / compile := (Compile / compile).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / test       := (Test    / test).dependsOn(kernelApi / Compile / packageBin).value,
+    Test / unmanagedJars += (kernelApi / Test / packageBin).value,
+
+    Test / publishArtifact := false,
+    Test / javaOptions ++= Seq(
+      "--add-opens=java.base/java.util=ALL-UNNAMED" // for Flink with Java 17.
     ),
-    assembly / assemblyMergeStrategy := {
-      // Discard `module-info.class` to fix the `different file contents found` error.
-      // TODO Upgrade SBT to 1.5 which will do this automatically
-      case "module-info.class" => MergeStrategy.discard
-      // Discard unused `parquet.thrift` so that we don't conflict the file used by the user
-      case "parquet.thrift" => MergeStrategy.discard
-      // Discard the jackson service configs that we don't need. These files are not shaded so
-      // adding them may conflict with other jackson version used by the user.
-      case PathList("META-INF", "services", xs @ _*) => MergeStrategy.discard
-      // This project `.dependsOn` delta-storage, and its classes will be included by default
-      // in this assembly jar. Manually discard them since it is already a compile-time dependency.
-      case PathList("io", "delta", "storage", xs @ _*) => MergeStrategy.discard
-      case x =>
-        val oldStrategy = (assembly / assemblyMergeStrategy).value
-        oldStrategy(x)
-    },
-    assembly / artifact := {
-      val art = (assembly / artifact).value
-      art.withClassifier(Some("assembly"))
-    },
-    addArtifact(assembly / artifact, assembly),
+    crossPaths := false,
 
-    // Unidoc setting
-    unidocSourceFilePatterns += SourceFilePattern("io/delta/standalone/"),
-    javaCheckstyleSettings("dev/connectors-checkstyle.xml")
-  ).configureUnidoc()
+    // Publish the pinned UC jars before sbt tries to resolve them.
+    update := update.dependsOn(ensurePinnedUnityCatalog).value,
 
-
-/*
-TODO (TD): Tests are failing for some reason
-lazy val compatibility = (project in file("connectors/oss-compatibility-tests"))
-  // depend on standalone test codes as well
-  .dependsOn(standalone % "compile->compile;test->test")
-  .dependsOn(spark % "test -> compile")
-  .settings(
-    name := "compatibility",
-    commonSettings,
-    skipReleaseSettings,
     libraryDependencies ++= Seq(
-      // Test Dependencies
-      "io.netty" % "netty-buffer"  % "4.1.63.Final" % "test",
-      "org.scalatest" %% "scalatest" % "3.1.0" % "test",
-      "commons-io" % "commons-io" % "2.8.0" % "test",
-      "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test",
-      "org.apache.spark" %% "spark-catalyst" % defaultSparkVersion % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % defaultSparkVersion % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test" classifier "tests",
+      "org.apache.flink" % "flink-core" % flinkVersion % "provided",
+      "org.apache.flink" % "flink-table-common" % flinkVersion % "provided",
+      "org.apache.flink" % "flink-streaming-java" % flinkVersion % "provided",
+      "org.apache.flink" % "flink-table-api-java-bridge" % flinkVersion % "provided",
+      "io.unitycatalog" % "unitycatalog-client" % unityCatalogVersion,
+      "org.apache.httpcomponents" % "httpclient" % "4.5.14" % Runtime,
+      "dev.failsafe" % "failsafe" % "3.2.0",
+      "com.github.ben-manes.caffeine" % "caffeine" % "3.1.8",
+      "org.apache.hadoop" % "hadoop-aws" % hadoopVersion,
+      "com.google.cloud.bigdataoss" % "gcs-connector" % gcsConnectorVersion % Provided classifier "shaded",
+      // kernel-api uses RoaringBitmap but ships as a shaded fat-jar that excludes it, and the
+      // unmanagedJars trick used above does not propagate kernel-api's managed deps. Declare it
+      // here too -- pinned to the same version kernel-api uses -- so our DV code under
+      // io.delta.flink.kernel.dv compiles against the same library on the classpath.
+      "org.roaringbitmap" % "RoaringBitmap" % "0.9.25",
+
+      // Test dependencies
+      "org.junit.jupiter" % "junit-jupiter-api" % "5.11.4" % "test",
+      "org.junit.jupiter" % "junit-jupiter-engine" % "5.11.4" % "test",
+      "org.junit.jupiter" % "junit-jupiter-params" % "5.11.4" % "test",
+      "com.github.sbt.junit" % "jupiter-interface" % "0.17.0" % "test",
+      "org.apache.flink" % "flink-test-utils" % flinkVersion % "test",
+      "org.apache.flink" % "flink-clients" % flinkVersion % "test",
+      "org.apache.flink" % "flink-table-api-java-bridge" % flinkVersion % Test,
+      "org.apache.flink" % "flink-table-planner-loader" % flinkVersion % Test,
+      "org.apache.flink" % "flink-table-runtime" % flinkVersion % Test,
+      "org.apache.flink" % "flink-test-utils-junit" % flinkVersion  % Test,
+      "org.slf4j" % "slf4j-log4j12" % "2.0.17" % "test",
+      "com.github.tomakehurst" % "wiremock-jre8" % "2.35.0" % Test,
+      "com.databricks" %% "databricks-connect" % "18.0.0" % Test,
+    ),
+    // Use jupiter
+    excludeDependencies ++= Seq(
+      ExclusionRule("junit", "junit"),
+      ExclusionRule("org.junit.vintage", "junit-vintage-engine")
     )
   )
- */
+
 
 lazy val goldenTables = (project in file("connectors/golden-tables"))
   .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
@@ -1468,38 +1730,6 @@ lazy val goldenTables = (project in file("connectors/golden-tables"))
       "org.apache.spark" %% "spark-catalyst" % defaultSparkVersion % "test" classifier "tests",
       "org.apache.spark" %% "spark-core" % defaultSparkVersion % "test" classifier "tests",
       "org.apache.spark" %% "spark-sql" % defaultSparkVersion % "test" classifier "tests"
-    )
-  )
-
-def sqlDeltaImportScalaVersion(scalaBinaryVersion: String): String = {
-  scalaBinaryVersion match {
-    // sqlDeltaImport doesn't support 2.11. We return 2.12 so that we can resolve the dependencies
-    // but we will not publish sqlDeltaImport with Scala 2.11.
-    case "2.11" => "2.12"
-    case _ => scalaBinaryVersion
-  }
-}
-
-lazy val sqlDeltaImport = (project in file("connectors/sql-delta-import"))
-  .disablePlugins(JavaFormatterPlugin, ScalafmtPlugin)
-  .settings (
-    name := "sql-delta-import",
-    commonSettings,
-    skipReleaseSettings,
-    publishArtifact := scalaBinaryVersion.value != "2.11",
-    Test / publishArtifact := false,
-    libraryDependencies ++= Seq(
-      // Using released delta-spark JAR instead of module dependency to break circular dependency
-      "io.delta" %% "delta-spark" % "3.3.2",
-      
-      "io.netty" % "netty-buffer"  % "4.1.63.Final" % "test",
-      "org.apache.spark" % ("spark-sql_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "provided",
-      "org.rogach" %% "scallop" % "3.5.1",
-      "org.scalatest" %% "scalatest" % scalaTestVersionForConnectors % "test",
-      "com.h2database" % "h2" % "1.4.200" % "test",
-      "org.apache.spark" % ("spark-catalyst_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "test",
-      "org.apache.spark" % ("spark-core_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "test",
-      "org.apache.spark" % ("spark-sql_" + sqlDeltaImportScalaVersion(scalaBinaryVersion.value)) % defaultSparkVersion % "test"
     )
   )
 
@@ -1522,6 +1752,7 @@ def listPythonFiles(pythonBase: File): Seq[(File, String)] = {
 ThisBuild / parallelExecution := false
 
 val createTargetClassesDir = taskKey[Unit]("create target classes dir")
+val generatePythonVersion = taskKey[File]("Generate Python version.py file")
 
 /*
  ******************
@@ -1530,23 +1761,40 @@ val createTargetClassesDir = taskKey[Unit]("create target classes dir")
  */
 
 // Don't use these groups for any other projects
-lazy val sparkGroup = project
-  .aggregate(spark, sparkV1, sparkV1Filtered, sparkV2, contribs, storage, storageS3DynamoDB, sharing, hudi)
-  .settings(
-    // crossScalaVersions must be set to Nil on the aggregating project
-    crossScalaVersions := Nil,
-    publishArtifact := false,
-    publish / skip := false,
-  )
+lazy val sparkGroup = {
+  val baseProjects = Seq(spark, sparkV1, sparkV1Filtered, sparkV2, contribs, sparkUnityCatalog, storage, storageS3DynamoDB, sharing, connectCommon, connectClient, connectServer)
+  val allProjects = if (supportHudi) {
+    baseProjects :+ hudi
+  } else {
+    baseProjects
+  }
 
-lazy val icebergGroup = project
-  .aggregate(iceberg, testDeltaIcebergJar)
-  .settings(
-    // crossScalaVersions must be set to Nil on the aggregating project
-    crossScalaVersions := Nil,
-    publishArtifact := false,
-    publish / skip := false,
-  )
+  Project("sparkGroup", file("sparkGroup"))
+    .aggregate(allProjects.map(_.project): _*)
+    .settings(
+      // crossScalaVersions must be set to Nil on the aggregating project
+      crossScalaVersions := Nil,
+      publishArtifact := false,
+      publish / skip := true,
+    )
+}
+
+lazy val icebergGroup = {
+  val allProjects = if (supportIceberg) {
+    Seq(iceberg, testDeltaIcebergJar)
+  } else {
+    Seq.empty
+  }
+
+  Project("icebergGroup", file("icebergGroup"))
+    .aggregate(allProjects.map(_.project): _*)
+    .settings(
+      // crossScalaVersions must be set to Nil on the aggregating project
+      crossScalaVersions := Nil,
+      publishArtifact := false,
+      publish / skip := true,
+    )
+}
 
 lazy val kernelGroup = project
   .aggregate(kernelApi, kernelDefaults, kernelBenchmarks)
@@ -1554,12 +1802,21 @@ lazy val kernelGroup = project
     // crossScalaVersions must be set to Nil on the aggregating project
     crossScalaVersions := Nil,
     publishArtifact := false,
-    publish / skip := false,
+    publish / skip := true,
     unidocSourceFilePatterns := {
       (kernelApi / unidocSourceFilePatterns).value.scopeToProject(kernelApi) ++
       (kernelDefaults / unidocSourceFilePatterns).value.scopeToProject(kernelDefaults)
     }
   ).configureUnidoc(docTitle = "Delta Kernel")
+
+lazy val flinkGroup = project
+  .aggregate(flink)
+  .settings(
+    // crossScalaVersions must be set to Nil on the aggregating project
+    crossScalaVersions := Nil,
+    publishArtifact := false,
+    publish / skip := true,
+  )
 
 /*
  ********************
@@ -1601,17 +1858,24 @@ lazy val releaseSettings = Seq(
   // TODO: This isn't working yet ...
   sonatypeProfileName := "io.delta", // sonatype account domain name prefix / group ID
   credentials += Credentials(
+    "OSSRH Staging API Service",
+    "ossrh-staging-api.central.sonatype.com",
+    sys.env.getOrElse("SONATYPE_USERNAME", ""),
+    sys.env.getOrElse("SONATYPE_PASSWORD", "")
+  ),
+  credentials += Credentials(
     "Sonatype Nexus Repository Manager",
-    "oss.sonatype.org",
+    "central.sonatype.com",
     sys.env.getOrElse("SONATYPE_USERNAME", ""),
     sys.env.getOrElse("SONATYPE_PASSWORD", "")
   ),
   publishTo := {
-    val nexus = "https://oss.sonatype.org/"
+    val ossrhBase = "https://ossrh-staging-api.central.sonatype.com/"
+    val centralSnapshots = "https://central.sonatype.com/repository/maven-snapshots/"
     if (isSnapshot.value) {
-      Some("snapshots" at nexus + "content/repositories/snapshots")
+      Some("snapshots" at centralSnapshots)
     } else {
-      Some("releases"  at nexus + "service/local/staging/deploy/maven2")
+      Some("releases"  at ossrhBase + "service/local/staging/deploy/maven2")
     }
   },
   licenses += ("Apache-2.0", url("http://www.apache.org/licenses/LICENSE-2.0")),
@@ -1673,7 +1937,7 @@ lazy val releaseSettings = Seq(
 // Looks like some of release settings should be set for the root project as well.
 publishArtifact := false  // Don't release the root project
 publish / skip := true
-publishTo := Some("snapshots" at "https://oss.sonatype.org/content/repositories/snapshots")
+publishTo := Some("snapshots" at "https://central.sonatype.com/repository/maven-snapshots/")
 releaseCrossBuild := false  // Don't use sbt-release's cross facility
 releaseProcess := Seq[ReleaseStep](
   checkSnapshotDependencies,
@@ -1682,7 +1946,7 @@ releaseProcess := Seq[ReleaseStep](
   setReleaseVersion,
   commitReleaseVersion,
   tagRelease
-) ++ CrossSparkVersions.crossSparkReleaseSteps("+publishSigned") ++ Seq[ReleaseStep](
+) ++ CrossSparkVersions.crossSparkReleaseSteps("publishSigned") ++ Seq[ReleaseStep](
 
   // Do NOT use `sonatypeBundleRelease` - it will actually release to Maven! We want to do that
   // manually.
